--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     ],
     "keywords": [
         "Buttons",
-        "Column Visibility",
-        "csv",
-        "excel",
-        "pdf",
-        "print",
+ "Column Visibility",
+ "csv",
+ "excel",
+ "pdf",
+ "print",
         "Bootstrap",
-        "Bootstrap5",
+ "Bootstrap5",
         "Datatables",
         "jQuery",
         "table",
@@ -25,6 +25,8 @@
         "sort"
     ],
     "dependencies": {
+        "datatables.net-buttons": ">=1.7.0",
+        "datatables.net-bs5": ">=1.10.24",
         "jquery": ">=1.7"
     },
     "moduleType": [
