--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,6 @@
     ],
     "require": {
         "datatables.net/datatables.net-buttons": ">=1.7.1",
-        "datatables.net/datatables.net-bs5": ">=1.10.26-dev"
+        "datatables.net/datatables.net-bs5": ">=1.10.25"
     }
 }
