--- a/nuget.nuspec
+++ b/nuget.nuspec
@@ -11,7 +11,7 @@
         <tags>Buttons  Column Visibility  csv  excel  pdf  print  Bootstrap  Bootstrap5  Datatables jQuery table</tags>
         <dependencies>
             <dependency id="datatables.net-buttons" version=">=1.7.1"/>
-            <dependency id="datatables.net-bs5" version=">=1.10.26-dev"/>
+            <dependency id="datatables.net-bs5" version=">=1.10.25"/>
         </dependencies>
         <contentFiles>
             <files include="**/*" buildAction="Content"/>
