--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     ],
     "dependencies": {
         "datatables.net-buttons": ">=1.7.1",
-        "datatables.net-bs5": ">=1.10.26-dev",
+        "datatables.net-bs5": ">=1.10.25",
         "jquery": ">=1.7"
     },
     "moduleType": [
