--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "js/buttons.bootstrap5.js",
     "module": "js/buttons.bootstrap5.mjs",
     "style": "css/buttons.bootstrap5.css",
-    "types": "./types/buttons.bootstrap5.d.ts",
+    "types": "./types/types.d.ts",
     "version": "2.2.3",
     "files": [
         "css/**/*.css",
