--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "js/buttons.bootstrap5.js",
     "module": "js/buttons.bootstrap5.mjs",
     "style": "css/buttons.bootstrap5.css",
-    "types": "./types/types.d.ts",
+    "types": "./types/buttons.bootstrap5.d.ts",
     "version": "2.3.6",
     "files": [
         "css/**/*.css",
@@ -14,13 +14,13 @@
     ],
     "keywords": [
         "Buttons",
-        "Column Visibility",
-        "csv",
-        "excel",
-        "pdf",
-        "print",
+ "Column Visibility",
+ "csv",
+ "excel",
+ "pdf",
+ "print",
         "Bootstrap",
-        "Bootstrap5",
+ "Bootstrap5",
         "Datatables",
         "jQuery",
         "table",
@@ -28,8 +28,8 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-buttons": ">=2.2.3",
-        "datatables.net-bs5": ">=1.12.1",
+        "datatables.net-buttons": ">=2.3.6",
+        "datatables.net-bs5": ">=1.13.4",
         "jquery": ">=1.7"
     },
     "moduleType": [
