--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "module": "js/buttons.bootstrap5.mjs",
     "style": "css/buttons.bootstrap5.css",
     "types": "./types/buttons.bootstrap5.d.ts",
-    "version": "2.4.2",
+    "version": "3.0.0",
     "files": [
         "css/**/*.css",
         "js/**/*.js",
@@ -28,8 +28,8 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-buttons": ">=2.3.6",
-        "datatables.net-bs5": ">=1.13.4",
+        "datatables.net-buttons": "3.0.0",
+        "datatables.net-bs5": ">=2.0.0",
         "jquery": ">=1.7"
     },
     "moduleType": [
