--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "module": "js/buttons.bootstrap5.mjs",
     "style": "css/buttons.bootstrap5.css",
     "types": "./types/buttons.bootstrap5.d.ts",
-    "version": "3.0.0",
+    "version": "3.0.1",
     "files": [
         "css/**/*.css",
         "js/**/*.js",
@@ -28,8 +28,8 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-buttons": "3.0.0",
-        "datatables.net-bs5": ">=2.0.0",
+        "datatables.net-buttons": "3.0.1",
+        "datatables.net-bs5": "^2",
         "jquery": ">=1.7"
     },
     "moduleType": [
